fixed overflow for oas / added vulx crackulator to nav / added nav to crackulator page

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,7 +1,7 @@
 // custom.scss
 
 // All of your custom SCSS variables go first
-$primary:       #7D61C8 ;
+$primary:       rgb(69, 174, 83);
 $secondary:     #ffffff ;
 $light:         #f1f1f1 ;
 $dark:          #000000 ;//then bootstrap & bootstrap-vue should be added after 
